Prevented tutorial icon from growing in flexbox, and decreased the size of the tutorial link so that it doesn't span whitespace.

--- a/styles.css
+++ b/styles.css
@@ -165,12 +165,14 @@ html
 
 .tutorial_box
 {
-  display: flex;
+  display: inline-flex;
 }
 
 .tutorial_box img
 {
-  flex-shrink: 0;
+  flex: 0 0;
+  width: 40px;
+  height: 40px;
 }
 
 .tutorial_box h2
